Fixing dark mode colour for nav icon

--- a/src/assets/style/navbar.scss
+++ b/src/assets/style/navbar.scss
@@ -6,6 +6,10 @@
 
   .icon {
     color: $theme-color;
+
+    .dark-theme & {
+      color: rgb(185, 216, 192);
+    }
   }
 
   .iconClicked {
@@ -51,7 +55,6 @@
       background-color: rgb(71, 98, 87);
     }
 
-
     @include mobile {
       display: none;
       width: 70%;
@@ -76,8 +79,6 @@
       opacity: 0.5;
     }
 
-    
-
     .indexImgWrapper {
       height: 90%;
       width: 100%;
@@ -86,7 +87,6 @@
         margin-left: -100px;
         position: absolute;
       }
-      
     }
 
     .nonIndexImgWrapper {
@@ -112,23 +112,9 @@
         }
       }
     }
-
-
     
     .icons {
       text-align: center;
-
-      .iconsWrapper {
-        // margin: 0;
-        // position: absolute;
-        // top: 50%;
-        // -ms-transform: translateY(-50%);
-        // transform: translateY(-50%);
-      }
-
-      // .imgBox:not(:first-child):not(:last-child) {
-      //   margin: 0px 10px 0px 10px;
-      // }
 
       .imgBox:not(:last-child) {
         margin-right: 10px;
@@ -142,14 +128,11 @@
           outline: 0;
         }
       }
-
-
     }
 
     .imgWrappers {
       bottom: 0;
       flex-grow: 1;
-  
     }
   }
 
